k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-transfer-route
  namespace: poc
spec:
  parentRefs:
    - name: ms-transfer-gateway
  hostnames:
    - ms-transfer.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ms-transfer-service
          port: 8080
